--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=BackEnd_RestAPI
 
-spring.profiles.active=prod
+spring.profiles.active=test
 
 #flyway ddl \uC2A4\uD06C\uB9BD\uD2B8 \uB514\uB809\uD1A0\uB9AC \uC704\uCE58 \uC124\uC815
 spring.flyway.location=classpath:/db/migration/{vendor}
